--- a/index.html
+++ b/index.html
@@ -169,47 +169,48 @@
   <h2 class="text-4xl font-bold text-center mb-16">Simple, Transparent Pricing</h2>
   <div class="grid md:grid-cols-3 gap-10">
 
-    <!-- Starter -->
+    <!-- Compliance Kickstart -->
     <div class="border border-gray-700 rounded-2xl p-8 flex flex-col bg-gradient-to-b from-gray-900 to-gray-800 shadow-lg">
-      <h3 class="text-2xl font-semibold mb-2 text-center">Starter</h3>
+      <h3 class="text-2xl font-semibold mb-2 text-center">Compliance Kickstart</h3>
       <p class="text-4xl font-bold text-green-400 text-center mb-4">€99</p>
-      <p class="text-sm text-gray-400 text-center mb-6">One-time report to assess AI Act readiness.</p>
+      <p class="text-sm text-gray-400 text-center mb-6">Get your first AI Act report in under 10 minutes.</p>
       <ul class="text-sm text-gray-300 space-y-2 mb-8">
         <li>✓ Risk classification</li>
-        <li>✓ AI Act checklist score</li>
-        <li>✓ PDF report within 10 minutes</li>
+        <li>✓ AI Act checklist scoring</li>
+        <li>✓ Audit-ready PDF report</li>
       </ul>
-      <a href="https://buy.stripe.com/5kQ14ncol2IegcZ7iq93y00" class="mt-auto text-center bg-green-500 text-black font-semibold py-3 rounded-lg hover:bg-green-400 transition">Get Starter</a>
+      <a href="https://buy.stripe.com/5kQ14ncol2IegcZ7iq93y00" class="mt-auto text-center bg-green-500 text-black font-semibold py-3 rounded-lg hover:bg-green-400 transition">Get Kickstart</a>
     </div>
 
-    <!-- Growth -->
+    <!-- Audit Booster -->
     <div class="border border-cyan-500 rounded-2xl p-8 flex flex-col bg-gradient-to-b from-gray-900 to-gray-800 shadow-lg scale-105 shadow-cyan-500/40">
-      <h3 class="text-2xl font-semibold mb-2 text-center">Growth</h3>
+      <h3 class="text-2xl font-semibold mb-2 text-center">Audit Booster</h3>
       <p class="text-4xl font-bold text-cyan-300 text-center mb-4">€249</p>
-      <p class="text-sm text-gray-400 text-center mb-6">Ideal for teams preparing for audits or investor due diligence.</p>
+      <p class="text-sm text-gray-400 text-center mb-6">Ideal for teams preparing for due diligence or compliance audits.</p>
       <ul class="text-sm text-gray-300 space-y-2 mb-8">
-        <li>✓ Everything in Starter</li>
-        <li>✓ Tailored recommendations</li>
-        <li>✓ Risk mitigation plan (PDF)</li>
+        <li>✓ Everything in Kickstart</li>
+        <li>✓ Tailored risk recommendations</li>
+        <li>✓ Risk mitigation roadmap (PDF)</li>
       </ul>
-      <a href="https://buy.stripe.com/4gM8wP9c9ciO3qd8mu93y01" class="mt-auto text-center bg-cyan-400 text-black font-semibold py-3 rounded-lg hover:bg-cyan-300 transition">Choose Growth</a>
+      <a href="https://buy.stripe.com/4gM8wP9c9ciO3qd8mu93y01" class="mt-auto text-center bg-cyan-400 text-black font-semibold py-3 rounded-lg hover:bg-cyan-300 transition">Choose Booster</a>
     </div>
 
-    <!-- Premium -->
+    <!-- Sentinel Shield -->
     <div class="border border-gray-700 rounded-2xl p-8 flex flex-col bg-gradient-to-b from-gray-900 to-gray-800 shadow-lg">
-      <h3 class="text-2xl font-semibold mb-2 text-center">Premium</h3>
+      <h3 class="text-2xl font-semibold mb-2 text-center">Sentinel Shield</h3>
       <p class="text-4xl font-bold text-purple-300 text-center mb-4">€499</p>
-      <p class="text-sm text-gray-400 text-center mb-6">For high-risk AI or regulated industries needing expert review.</p>
+      <p class="text-sm text-gray-400 text-center mb-6">Full protection for high-risk AI and regulated sectors.</p>
       <ul class="text-sm text-gray-300 space-y-2 mb-8">
-        <li>✓ Everything in Growth</li>
-        <li>✓ 1:1 Expert session (30 min)</li>
+        <li>✓ Everything in Booster</li>
+        <li>✓ 1:1 Expert strategy session (30 min)</li>
         <li>✓ Annual compliance support</li>
       </ul>
-      <a href="https://buy.stripe.com/8x29AT4VTdmS9OBbyG93y02" class="mt-auto text-center bg-purple-400 text-black font-semibold py-3 rounded-lg hover:bg-purple-300 transition">Upgrade to Premium</a>
+      <a href="https://buy.stripe.com/8x29AT4VTdmS9OBbyG93y02" class="mt-auto text-center bg-purple-400 text-black font-semibold py-3 rounded-lg hover:bg-purple-300 transition">Upgrade to Shield</a>
     </div>
 
   </div>
 </section>
+
 
 <!-- Compliance Section -->
 <section id="compliance" class="max-w-5xl mx-auto py-24 px-6 text-white">
