--- a/index.html
+++ b/index.html
@@ -295,6 +295,19 @@
   </form>
 </section>
 
+<section id="contact" class="max-w-3xl mx-auto py-24 px-6 text-white">
+  <h2 class="text-3xl font-bold text-center mb-8">Kontakta oss</h2>
+  <form action="https://hooks.zapier.com/hooks/catch/23318877/uoliwd5/" method="POST" class="flex flex-col space-y-4 bg-gray-900 p-6 rounded-xl shadow-md">
+    <input type="text" name="name" placeholder="Ditt namn" required class="p-3 rounded bg-gray-800 border border-cyan-500 text-white">
+    <input type="email" name="email" placeholder="Din e-postadress" required class="p-3 rounded bg-gray-800 border border-cyan-500 text-white">
+    <textarea name="message" placeholder="Ditt meddelande" rows="5" required class="p-3 rounded bg-gray-800 border border-cyan-500 text-white"></textarea>
+    <button type="submit" class="bg-green-500 hover:bg-green-400 text-black font-bold py-2 px-4 rounded transition">
+      Skicka
+    </button>
+  </form>
+</section>
+
+
 <!-- Footer Section -->
 <footer class="bg-black text-gray-400 py-10 px-6 mt-10 border-t border-gray-800">
   <div class="max-w-6xl mx-auto flex flex-col md:flex-row justify-between items-center text-sm space-y-4 md:space-y-0">
