--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <a href="#compliance" class="hover:text-cyan-400 transition-all duration-200">AI Act</a>
     </nav>
     <div class="hidden md:flex items-center space-x-4">
-      <a href="#signup" class="px-4 py-2 bg-green-400 text-black font-semibold rounded shadow hover:bg-green-300 transition">
+      <a href="#signupfooter" class="px-4 py-2 bg-green-400 text-black font-semibold rounded shadow hover:bg-green-300 transition">
         Get Started Free
       </a>
     </div>
@@ -210,7 +210,6 @@
   </div>
 </section>
 
-
 <!-- Compliance Section -->
 <section id="compliance" class="max-w-5xl mx-auto py-24 px-6 text-white">
   <h2 class="text-3xl md:text-4xl font-bold text-center mb-12">Built for the EU AI Act</h2>
@@ -306,7 +305,6 @@
     </button>
   </form>
 </section>
-
 
 <!-- Footer Section -->
 <footer class="bg-black text-gray-400 py-10 px-6 mt-10 border-t border-gray-800">
