--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
   <section id="contact" class="py-20 px-4 bg-black text-white">
     <div class="max-w-xl mx-auto text-center">
       <h2 class="text-3xl font-bold mb-6">Contact Us</h2>
-      <form id="contactForm" class="space-y-4">
+      <form action="https://hooks.zapier.com/hooks/catch/23318877/uolhdlm/" method="POST" class="space-y-4">
         <input type="text" name="name" placeholder="Your Name" required class="w-full px-4 py-2 bg-gray-900 text-white border border-gray-700 rounded" />
         <input type="email" name="email" placeholder="Your Email" required class="w-full px-4 py-2 bg-gray-900 text-white border border-gray-700 rounded" />
         <textarea name="message" placeholder="Your Message" required class="w-full px-4 py-2 bg-gray-900 text-white border border-gray-700 rounded h-32"></textarea>
@@ -309,34 +309,6 @@
     </div>
   </section>
 
-  <script>
-  document.getElementById("contactForm").addEventListener("submit", async function (e) {
-    e.preventDefault();
-    const form = e.target;
-    const data = {
-      name: form.name.value,
-      email: form.email.value,
-      message: form.message.value
-    };
-    const msg = document.getElementById("responseMsg");
-    msg.textContent = "Sending...";
-    try {
-const res = await fetch("/api/contact", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify(data)
-      });
-      if (res.ok) {
-        msg.textContent = "Message sent successfully ✅";
-        form.reset();
-      } else {
-        msg.textContent = "Something went wrong ❌";
-      }
-    } catch (err) {
-      msg.textContent = "Connection error ❌";
-    }
-  });
-  </script>
   <!-- Kontaktsektion – slutar här -->
 
 </body>
